@@ -1,3 +1,11 @@
+2020-11-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* spc_html.c: Fix a bug that html-special was not working
+	after the changes introduced in rev.55722 (pdf:bann accepts a
+	reference ID).
+	* type0.c: Add pseudo-unique tag to ToUnicode CMap name again.
+	* configure.ac: Version 20201111.
+
 2020-10-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* pdfximage.c: Fix a bug that mps images are not reused when
